syntax = "proto3";
package project.service.v1;
option go_package = "project-project/pkg/service/project.service.v1";

message IndexMessage{
  string token = 1;
}
message MenuMessage {
  int64  id = 1;
  int64 pid = 2;
  string title = 3;
  string icon = 4;
  string url = 5;
  string filePath = 6;
  string params = 7;
  string node = 8;
  int32 sort = 9;
  int32 status = 10;
  int64 createBy = 11;
  int32 isInner = 12;
  string values = 13;
  int32 showSlider = 14;
  string statusText = 15;
  string innerText  = 16;
  string fullUrl    = 17;
  repeated MenuMessage children = 18;
}
message IndexResponse{
  repeated MenuMessage menus = 1;
}

message ProjectMessage {//项目/单个项目信息共用一个message，所以会有collected字段
  int64 Id = 1;
  string Cover = 2;
  string Name = 3;
  string Description = 4;
  string AccessControlType = 5;
  string WhiteList = 6;
  int32 Order = 7;
  int32 Deleted = 8;
  string TemplateCode = 9;
  double Schedule = 10;
  string CreateTime = 11;
  int64 OrganizationCode = 12;
  string DeletedTime = 13;
  int32 Private = 14;
  string Prefix = 15;
  int32 OpenPrefix = 16;
  int32 Archive = 17;
  int64 ArchiveTime = 18;
  int32 OpenBeginTime = 19;
  int32 OpenTaskPrivate = 20;
  string TaskBoardTheme = 21;
  string BeginTime = 22;
  string EndTime = 23;
  int32 AutoUpdateSchedule = 24;
  int64 ProjectCode = 25;
  int64 MemberCode = 26;
  string JoinTime  = 27;
  int64 IsOwner = 28;
  string Authorize = 29;
  string code = 30;
  string ownerName = 31;//?
  int32 collected = 32;//?
  string owner_avatar=33;
}

message ProjectRpcMessage{
  int64 memberId=1;
  string memberName = 2;
  int64 page=3;
  int64 pageSize=4;
  string selectBy=5;
  string organizationCode = 6;//组织，为什么要rpc调用方传入，意思是api模块来做organization加密吗？
  int32 viewType = 7;
}

message ProjectTemplateMessage{
  int32 id = 1;
  string name = 2;
  string description = 3;
  int32 sort = 4;
  string createTime = 5;
  string organizationCode = 6;
  string cover = 7;
  string memberCode = 8;
  int32 isSystem = 9;
  repeated TaskStages taskStages = 10;
  string code = 11;
}
message TaskStages{
  string name = 1;
}

message MyProjectResponse{
  repeated ProjectMessage pm=1;
  int64 total=2;
}

message ProjectTemplateResponse{
  repeated ProjectTemplateMessage ptm = 1;
  int64  Total = 2;
}


service ProjectService {
  rpc Index(IndexMessage) returns (IndexResponse) {}
  rpc FindProjectByMemId(ProjectRpcMessage) returns (MyProjectResponse){}
  rpc FindProjectTemplate(ProjectRpcMessage) returns (ProjectTemplateResponse){}
  rpc CreateProject(ProjectMessage)returns (ProjectMessage){}//为什么想到共用/复用一个message，因为本次请求参数，projectRpcMessage本来就有，没必要
  rpc ReadProject(ProjectMessage)returns (ProjectMessage){}
}
